model_creation first attempt

--- a/notebooks/01_data_preprocessing.ipynb
+++ b/notebooks/01_data_preprocessing.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "Name: public_meeting, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
        "Name: permit, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,6 +546,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Let's perform a one hot enconder on the categorical columns that have less than 6 categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Categorical columns in X_train:\n",
+      "Index(['basin', 'region', 'extraction_type_class', 'management_group',\n",
+      "       'payment_type', 'quality_group', 'quantity_group', 'source_type',\n",
+      "       'waterpoint_type', 'scheme_management_grouped'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Identifying categorical columns\n",
+    "categorical_columns = X_train.select_dtypes(include=['object', 'category']).columns\n",
+    "\n",
+    "# Printing the list of categorical columns\n",
+    "print(\"Categorical columns in X_train:\")\n",
+    "print(categorical_columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "usergroup     42018\n",
+       "commercial     2869\n",
+       "parastatal     1413\n",
+       "other           764\n",
+       "unknown         456\n",
+       "Name: management_group, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train['management_group'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "never pay     20318\n",
+       "per bucket     7223\n",
+       "monthly        6574\n",
+       "unknown        6521\n",
+       "on failure     3154\n",
+       "annually       2886\n",
+       "other           844\n",
+       "Name: payment_type, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train['payment_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Given that most of the categorical columns have more than 6 values, we are going to perfom a target enconder on these categorical columns"
    ]
   },
@@ -558,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -738,7 +825,7 @@
        "50091                   0.410441  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1192,10 +1279,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "**X_test**"
    ]
@@ -1412,10 +1497,10 @@
    "outputs": [],
    "source": [
     "# Concatenate all train\n",
-    "df_train = pd.concat([X_train,y_train], axis=1)\n",
+    "df_train = pd.concat([X_train, y_train], axis=1)\n",
     "\n",
     "# Concatenate all test\n",
-    "df_test = pd.concat([X_test,y_test], axis=1)\n",
+    "df_test = pd.concat([X_test, y_test], axis=1)\n",
     "\n",
     "# Create a label column\n",
     "df_train['is_test'] = 0\n",
@@ -1431,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1470,7 +1555,7 @@
        "      <th>source_type</th>\n",
        "      <th>waterpoint_type</th>\n",
        "      <th>scheme_management_grouped</th>\n",
-       "      <th>0</th>\n",
+       "      <th>status_group</th>\n",
        "      <th>is_test</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1740,23 +1825,23 @@
        "59398  -1.022441e-09    2.632229e-16  1.021931e-12        -0.000058   \n",
        "59399  -1.022441e-09    2.632229e-16  1.021931e-12        -0.000058   \n",
        "\n",
-       "       scheme_management_grouped  0  is_test  \n",
-       "0                      -2.699527  0        0  \n",
-       "1                       0.429287  0        0  \n",
-       "2                       0.429287  1        0  \n",
-       "3                       0.429287  1        0  \n",
-       "4                       0.429287  1        0  \n",
-       "...                          ... ..      ...  \n",
-       "59395                   0.000000  0        1  \n",
-       "59396                   0.000000  0        1  \n",
-       "59397                   0.000000  1        1  \n",
-       "59398                   0.000000  0        1  \n",
-       "59399                   0.000000  0        1  \n",
+       "       scheme_management_grouped  status_group  is_test  \n",
+       "0                      -2.699527             0        0  \n",
+       "1                       0.429287             0        0  \n",
+       "2                       0.429287             1        0  \n",
+       "3                       0.429287             1        0  \n",
+       "4                       0.429287             1        0  \n",
+       "...                          ...           ...      ...  \n",
+       "59395                   0.000000             0        1  \n",
+       "59396                   0.000000             0        1  \n",
+       "59397                   0.000000             1        1  \n",
+       "59398                   0.000000             0        1  \n",
+       "59399                   0.000000             0        1  \n",
        "\n",
        "[59400 rows x 17 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1766,6 +1851,9 @@
     "\n",
     "# Reset index\n",
     "data_processed = data_processed.reset_index(drop=True)\n",
+    "\n",
+    "# Rename column 0 to status_group\n",
+    "data_processed = data_processed.rename(columns={0: 'status_group'})\n",
     "\n",
     "data_processed"
    ]
@@ -1779,12 +1867,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_processed.to_excel('df_data_processed.xlsx', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
