cleaning up the notebooks and adding .gitignore as well as requirements.txt

--- a/notebooks/01_data_preprocessing.ipynb
+++ b/notebooks/01_data_preprocessing.ipynb
@@ -74,20 +74,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.3 Functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 3. Code"
    ]
   },
@@ -700,69 +686,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "usergroup     42018\n",
-       "commercial     2869\n",
-       "parastatal     1413\n",
-       "other           764\n",
-       "unknown         456\n",
-       "Name: management_group, dtype: int64"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train['management_group'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##################################"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "never pay     20318\n",
-       "per bucket     7223\n",
-       "monthly        6574\n",
-       "unknown        6521\n",
-       "on failure     3154\n",
-       "annually       2886\n",
-       "other           844\n",
-       "Name: payment_type, dtype: int64"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train['payment_type'].value_counts()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "scrolled": false
@@ -821,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,32 +760,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-20-c47828e78ec6>:22: SettingWithCopyWarning: \n",
+      "<ipython-input-17-c47828e78ec6>:22: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  X_train[col] = target_encoder.fit_transform(X_train[col], y_train)\n",
-      "<ipython-input-20-c47828e78ec6>:23: SettingWithCopyWarning: \n",
+      "<ipython-input-17-c47828e78ec6>:23: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  X_test[col] = target_encoder.transform(X_test[col])\n",
-      "<ipython-input-20-c47828e78ec6>:22: SettingWithCopyWarning: \n",
+      "<ipython-input-17-c47828e78ec6>:22: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  X_train[col] = target_encoder.fit_transform(X_train[col], y_train)\n",
-      "<ipython-input-20-c47828e78ec6>:23: SettingWithCopyWarning: \n",
+      "<ipython-input-17-c47828e78ec6>:23: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1107,7 +1030,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1398,7 +1321,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1424,45 +1347,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
     }
    ],
    "source": [
-    "len(numerical_columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['amount_tsh', 'gps_height', 'population', 'basin', 'region',\n",
-       "       'extraction_type_class', 'payment_type', 'source_type',\n",
-       "       'waterpoint_type', 'installer_type'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "numerical_columns"
+    "numerical_columns\n",
+    "\n",
+    "print(len(numerical_columns))"
    ]
   },
   {
@@ -1474,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1714,7 +1613,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1735,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1759,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2171,7 +2070,7 @@
        "[59400 rows x 36 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2197,19 +2096,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_processed.to_excel('df_data_processed.xlsx', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
