Improved the 04 notebook, adjusted the 03 notebook, and updated the readme

--- a/notebooks/03_predict.ipynb
+++ b/notebooks/03_predict.ipynb
@@ -1389,14 +1389,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Decision Tree Classifier\n",
+    "# Loading the pickle for the best Decision Tree Classifier\n",
     "best_tree_pickle = pickle.load(open('model_objects/best_tree.pickle', 'rb'))\n",
-    "df_predict['status_group'] = best_tree_pickle.predict_proba(df_predict)[:, 1]"
+    "\n",
+    "# Let's drop the 'id' column\n",
+    "df_predict_copy = df_predict.drop('id', axis=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decision Tree Classifier\n",
+    "df_predict['status_group'] = best_tree_pickle.predict_proba(df_predict_copy)[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1406,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1439,32 +1451,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>50785</td>\n",
-       "      <td>0.180556</td>\n",
-       "      <td>Functional</td>\n",
+       "      <td>0.884615</td>\n",
+       "      <td>Non-functional</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>51630</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.163102</td>\n",
        "      <td>Functional</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>17168</td>\n",
-       "      <td>0.180505</td>\n",
-       "      <td>Functional</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>Non-functional</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>45559</td>\n",
-       "      <td>0.777778</td>\n",
+       "      <td>0.988601</td>\n",
        "      <td>Non-functional</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>49871</td>\n",
-       "      <td>0.404255</td>\n",
-       "      <td>Functional</td>\n",
+       "      <td>0.576923</td>\n",
+       "      <td>Non-functional</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1475,31 +1487,31 @@
        "    <tr>\n",
        "      <th>14845</th>\n",
        "      <td>39307</td>\n",
-       "      <td>0.888889</td>\n",
+       "      <td>0.816399</td>\n",
        "      <td>Non-functional</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14846</th>\n",
        "      <td>18990</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>Non-functional</td>\n",
+       "      <td>0.154597</td>\n",
+       "      <td>Functional</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14847</th>\n",
        "      <td>28749</td>\n",
-       "      <td>0.777778</td>\n",
-       "      <td>Non-functional</td>\n",
+       "      <td>0.255814</td>\n",
+       "      <td>Functional</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14848</th>\n",
        "      <td>33492</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.255814</td>\n",
        "      <td>Functional</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14849</th>\n",
        "      <td>68707</td>\n",
-       "      <td>0.882353</td>\n",
+       "      <td>0.984899</td>\n",
        "      <td>Non-functional</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1509,22 +1521,22 @@
       ],
       "text/plain": [
        "          id  status_group status_group_class\n",
-       "0      50785      0.180556         Functional\n",
-       "1      51630      0.000000         Functional\n",
-       "2      17168      0.180505         Functional\n",
-       "3      45559      0.777778     Non-functional\n",
-       "4      49871      0.404255         Functional\n",
+       "0      50785      0.884615     Non-functional\n",
+       "1      51630      0.163102         Functional\n",
+       "2      17168      0.666667     Non-functional\n",
+       "3      45559      0.988601     Non-functional\n",
+       "4      49871      0.576923     Non-functional\n",
        "...      ...           ...                ...\n",
-       "14845  39307      0.888889     Non-functional\n",
-       "14846  18990      0.666667     Non-functional\n",
-       "14847  28749      0.777778     Non-functional\n",
-       "14848  33492      0.000000         Functional\n",
-       "14849  68707      0.882353     Non-functional\n",
+       "14845  39307      0.816399     Non-functional\n",
+       "14846  18990      0.154597         Functional\n",
+       "14847  28749      0.255814         Functional\n",
+       "14848  33492      0.255814         Functional\n",
+       "14849  68707      0.984899     Non-functional\n",
        "\n",
        "[14850 rows x 3 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1542,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
