--- a/notebooks/04_primary_notebook.ipynb
+++ b/notebooks/04_primary_notebook.ipynb
@@ -144,7 +144,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. DATA UNDERSTANDING"
+    "# 4. DATA UNDERSTANDING\n",
+    "# Overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This section will focus on preparing the data for future model training. For a detailed description of the steps followed in the EDA of the databases, please refer to the notebook [Go to Notebook 00_data_understanding.ipynb](00_data_understanding.ipynb)."
    ]
   },
   {
@@ -6269,7 +6277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Considering that non-functional pumps have in most cases a waterpoint_type different from cattle trough, communal standpipe, communal standpipe multiple, dam, hand pump and improved spring, it is possible to verify which pumps do not have these waterpoint_types as a proxy variable to know if they are functional or not and thus focus efforts on repairing them."
+    "3. We recommend investing in communal standpipe multiple access points as they best detect pump functionality."
    ]
   }
  ],
